--- a/css/styles.css
+++ b/css/styles.css
@@ -54,7 +54,7 @@ strong{
     background-position: 99% center;
 }
 select.tick{
-    background-position: 84% center;
+    background-position: calc(100% - 10px) center;
 }
 .footer-margin-top{
     margin-top: 40px;
@@ -205,6 +205,9 @@ h2.inner-pages{
     margin-top: 15px;
     text-align: left;
     padding-left: 5px;
+}
+.form-group.data-check{
+    display: none;
 }
 #privacyCheck, #dataCheck{
     margin-left: 0px;
