--- a/css/styles.css
+++ b/css/styles.css
@@ -47,6 +47,9 @@ strong{
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 1.1em;
 }
+.no-display{
+    display: none !important;
+}
 .tick{
     background-image: url(../assets/tick-icon.png);
     background-repeat: no-repeat;
@@ -140,9 +143,6 @@ h2.inner-pages{
     padding-right: 20px;
 }
 #user-form .form-group .error-feedback{
-    display: none;
-}
-#user-form .form-group.has-error-feedback .error-feedback{
     display: block;
     margin-left: 16px;
     font-size: 12px;
@@ -151,9 +151,6 @@ h2.inner-pages{
     margin-bottom: -2px;
 }
 #user-form .form-group .error-code-feedback{
-    display: none;
-}
-#user-form .form-group.has-code-error-feedback .error-code-feedback{
     display: block;
     font-size: 12px;
     margin-top: 4px;
@@ -559,7 +556,7 @@ footer a:hover{
         margin-left: 0px;
         margin-right: 0px;
     }
-    #user-form .form-group.has-error-feedback .error-feedback {
+    #user-form .form-group .error-feedback {
         margin-left: 33%;
     }
     #user-form .col-sm-3.control-label{
@@ -608,7 +605,7 @@ footer a:hover{
     }
 }
 @media(min-width: 992px){
-    #user-form .form-group.has-error-feedback .error-feedback {
+    #user-form .form-group .error-feedback {
         margin-left: 27.5%;
     }
     #user-form .col-sm-3.control-label{
@@ -645,7 +642,7 @@ footer a:hover{
     }
 }
 @media(min-width: 1200px){
-    #user-form .form-group.has-error-feedback .error-feedback {
+    #user-form .form-group .error-feedback {
         margin-left: 24%;
     }
     #user-form .col-sm-3.control-label{
