--- a/css/styles.css
+++ b/css/styles.css
@@ -684,7 +684,7 @@ footer a:hover{
     select{
         padding-left: 8px;
     }
-}
-_:-ms-fullscreen, :root select{
-    padding-left: 8px;
+    *::-ms-backdrop, select{
+        padding-left: 8px;
+    }
 }
