testing hacks on IE 11

--- a/css/styles.css
+++ b/css/styles.css
@@ -38,6 +38,7 @@ select{
     font-style: italic;
     text-indent: 6px;
 }
+_:-ms-fullscreen, :root select{  padding-left: 8px;  }
 footer{
     background-color: #3b3b3d;
     color: white;
@@ -682,9 +683,6 @@ footer a:hover{
 }
 @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
     select{
-        padding-left: 8px;
-    }
-    *::-ms-backdrop, select{
         padding-left: 8px;
     }
 }
