--- a/css/styles.css
+++ b/css/styles.css
@@ -204,7 +204,7 @@ h2.inner-pages{
     padding-left: 5px;
 }
 .form-group.data-check{
-    display: none; /*comment this line to show the second check box*/
+    display: none;
 }
 #privacyCheck, #dataCheck{
     margin-left: 0px;
@@ -221,6 +221,9 @@ h2.inner-pages{
 }
 .input-holder.data-check label{
     min-height: 29px;
+}
+#user-form.correct-data .data-check{
+    display: block;
 }
 input#privacyCheck[type="checkbox"] + label:before,
 input#dataCheck[type="checkbox"] + label:before{
